--- a/css.folder/style.css
+++ b/css.folder/style.css
@@ -18,6 +18,7 @@ body {
 .current-weather-card {
     background-color: #d9efff;
     border-radius: 5px;
+    box-shadow: 0 8px 6px 0px gray;
 }
 
 .forecast-card {
@@ -25,6 +26,7 @@ body {
     max-width: 18.5%;
     background-color: #d9efff;
     border-radius: 5px;
+    box-shadow: 0 8px 6px 0px gray;
 }
 
 #current-weather-card {
@@ -49,8 +51,15 @@ body {
 
 #search-button {
     background-color: rgba(23, 124, 255, 0.865);
+    box-shadow: 0 8px 6px -5px gray;
     color: white;
     margin-top: 10px;
     width: 185px;
     border-radius: 5px;
+}
+
+#search-button:hover {
+    background-color: white;
+    color: rgba(23, 124, 255, 0.865);
+    border-color: rgba(23, 124, 255, 0.865);
 }
