--- a/assets/style.css
+++ b/assets/style.css
@@ -30,11 +30,12 @@ body {
 }
 
 .search-history-button:hover {
-    background-color: #b8c8ff;
+    background-color: white;
     box-shadow: 0 8px 6px -5px gray;
     color: black;
     margin-top: 10px;
     width: 185px;
+    border-color: #d9efff;
     border-radius: 5px;
 }
 
