--- a/assets/style.css
+++ b/assets/style.css
@@ -30,12 +30,11 @@ body {
 }
 
 .search-history-button:hover {
-    background-color: white;
+    background-color: #94d1fd;
     box-shadow: 0 8px 6px -5px gray;
     color: black;
     margin-top: 10px;
     width: 185px;
-    border-color: #d9efff;
     border-radius: 5px;
 }
 
